# Project_workshop_2s

./: .env.prod.example  .gitignore  DEPLOY.md  MIGRATION_NOTES.md  Makefile  Market_research.md  README.md  architecture.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: deploy-pages.yml
backend/: .dockerinit.sh  .environment-example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
backend/bd_concept/: readme.md
backend/core/: asgi.py  pytest_settings.py  settings.py  urls.py
backend/habits/: admin.py  apps.py  auth_views.py  context_processors.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/habits/api/: serializers.py  urls.py  views.py
backend/habits/commands/: seed_demo.py
backend/habits/management/commands/: seed_demo.py  seed_taxonomy.py
backend/habits/migrations/: 0001_initial.py  0002_seed_taxonomy.py  0003_habitschedule_window_end_habitschedule_window_start.py  0004_drop_monthly_frequency.py
backend/habits/services/: __init__.py  analytics.py  gamification.py  insights.py  streak.py
backend/habits/templates/habits/: dashboard.html  habit_detail.html  login.html  register.html
backend/habits/tests/: factories.py  test_audit_regressions.py  test_correlations.py  test_hour_distribution.py  test_mascot_stages.py  test_smoke.py  test_view_smoke.py
backend/static/admin/css/: custom.css
backend/templates/: analytics.html  base.html  calendar.html  dashboard.html  habit_detail.html  habits_archive.html  landing.html
backend/templates/auth/: login.html  register.html
backend/templates/includes/: add_habit_modal.html  feature_card.html
nginx/: default.conf
project_presentation/Presentation_1/: 1_dashboard_with_calendar.html  2_analytics.html  3_habit_details.html  4_add_habit_modal.html  index.html  mvp.html  problem.html  product.html
project_presentation/Presentation_1/first_ui_prototype/: 1_dashboard_with_calendar.html  2_analytics.html  4_add_habit_modal.html
tags/: README.md  example.sql  init.sql
