[project]
name = 'habithamster'
version = '0.1.0'
requires-python = '>=3.12'
# Mirrors requirements.txt; the Docker image installs from requirements.txt.
dependencies = [
    'asgiref==3.11.1',
    'Django==6.0.4',
    'django-environ==0.13.0',
    'djangorestframework==3.17.1',
    'psycopg2-binary==2.9.10',
    'sqlparse==0.5.5',
    'Pillow==11.0.0',
    'whitenoise==6.12.0',
    'requests==2.32.3',
    'gunicorn==23.0.0',
]

[project.optional-dependencies]
dev = [
    'pytest==8.3.3',
    'pytest-django==4.9.0',
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.pytest_settings'
addopts = '--new-first --failed-first --nomigrations -vv -x'
filterwarnings = ['ignore::RuntimeWarning', 'ignore::DeprecationWarning']

[tool.pyright]
reportUnknownMemberType = false